fix navigation items clipping on mobile

--- a/src/app/page-layout/page-layout.component.scss
+++ b/src/app/page-layout/page-layout.component.scss
@@ -86,6 +86,7 @@ $flyout-gap: ($flyout-spacing / 2);
   // TODO: the transition causes some weirdness when the media query is triggered
 
   @include mobile {
+    overflow-y: auto;
     margin: 0;
     padding: 0;
 
